--- a/src/Sample.Wasm/Sample.Wasm.csproj
+++ b/src/Sample.Wasm/Sample.Wasm.csproj
@@ -1,14 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+  <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.1.21452.15" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.1.21452.15" PrivateAssets="all" />
+  <!-- Blazor WASM runtime + tooling for dev server -->
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.7" PrivateAssets="all" />
+  <!-- Microsoft.Extensions.AI abstractions + OpenAI adapter -->
+  <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.0-preview.9.24503.7" />
+  <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.0.0-preview.9.24503.7" />
   </ItemGroup>
 
 </Project>
