--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   Build-and-Tests:
     name: Build and Test
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu
     steps:
     - uses: actions/checkout@v2
     - name: running infrastructure
@@ -20,7 +20,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '8.0.x'
         include-prerelease: true
     - name: Add Nuget
       run: |
