--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,58 +2,132 @@ name: CI
 
 on:
   push:
-    branches: [ "*" ]
+    branches: ['*']
   pull_request:
-    branches: [ "*" ]
+    branches: ['*']
+
+# 중복 실행 방지(같은 브랜치에서 최신만 남김)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+# 워크플로우 전체 기본 권한(필요한 job에서만 추가로 권한 확장)
+permissions:
+  contents: read
+
+env:
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: '1'
+  DOTNET_NOLOGO: '1'
 
 jobs:
-  Build-and-Tests:
-    name: Build and Test
-    runs-on: ubuntu
+  build_and_test:
+    name: Build & Test
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: running infrastructure
-      run: |
-        cd infrastructure
-        docker-compose up -d
-        sleep 2s            
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'
-        include-prerelease: true
-    - name: Add Nuget
-      run: |
-        cd src
-        for proj in $(dotnet sln list | grep Tests)        
-        do
-          dotnet add "$proj" package JunitXml.TestLogger || true
-          dotnet add "$proj" package altcover || true	
-        done
-    - name: Test
-      run: |	  
-        cd src	
-        dotnet clean 	        
-        dotnet restore	      
-        dotnet test --logger "junit;LogFileName=Report.xml"
-        sleep 2s
-        dotnet test /p:AltCover=true /p:AltCoverReport="altcover.xml" /p:AltCoverAssemblyExcludeFilter='(xunit.*)|(System.*)|(.*Tests)'
-    - name: "Repository Meta"
-      uses: varunsridharan/action-repository-meta@main
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
-    - name: Build
-      run: |
-        cd src	
-        dotnet publish -o ../docs --configuration Release
-        sed -i 's%<base href="/"%<base href="/${{env.REPOSITORY_SLUG}}/"%g' ../docs/wwwroot/index.html
-        touch ../docs/wwwroot/.nojekyll
-    - name: Deploy to Github Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BASE_BRANCH: master
-        BRANCH: gh-pages
-        FOLDER: docs/wwwroot
-        SINGLE_COMMIT: true
-      if: ${{ github.ref == 'refs/heads/master' }}
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Cache NuGet
+        uses: actions/cache@v4
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Start infrastructure (docker compose)
+        run: |
+          docker compose -f infrastructure/docker-compose.yml up -d --wait
+
+      - name: Add test packages (if missing)
+        working-directory: src
+        run: |
+          set -e
+          for proj in $(dotnet sln list | grep Tests || true); do
+            dotnet add "$proj" package JunitXml.TestLogger || true
+            dotnet add "$proj" package altcover || true
+          done
+
+      - name: Restore & Build
+        working-directory: src
+        run: |
+          dotnet clean
+          dotnet restore
+          dotnet build --configuration Release --no-restore
+
+      - name: Test (JUnit)
+        working-directory: src
+        run: |
+          dotnet test --configuration Release --no-build \
+            --logger "junit;LogFileName=Report.xml"
+
+      - name: Coverage (AltCover)
+        working-directory: src
+        run: |
+          dotnet test --configuration Release --no-build \
+            /p:AltCover=true \
+            /p:AltCoverReport="altcover.xml" \
+            /p:AltCoverAssemblyExcludeFilter='(xunit.*)|(System.*)|(.*Tests)'
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: |
+            src/**/Report.xml
+            src/**/altcover.xml
+          if-no-files-found: warn
+          retention-days: 14
+
+      # 리포지토리 메타 정보가 꼭 필요하면 유지 (토큰 권한만 read로도 동작하는지 확인)
+      - name: Repository Meta
+        uses: varunsridharan/action-repository-meta@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish (dotnet)
+        working-directory: src
+        run: |
+          dotnet publish -c Release -o ../docs
+          # 앱이 SPA라면 base href 재작성
+          sed -i 's%<base href="/"%<base href="/${{ github.event.repository.name }}/"%g' ../docs/wwwroot/index.html || true
+          touch ../docs/wwwroot/.nojekyll
+
+      - name: Upload site artifact (for Pages)
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/wwwroot
+
+  deploy_pages:
+    name: Deploy to GitHub Pages
+    needs: build_and_test
+    # main 브랜치로의 push만 배포 (필요시 'master'로 변경)
+    if: github.event_name == 'push' && github.ref_name == 'main'
+    runs-on: ubuntu-latest
+
+    # Pages 배포에 필요한 최소 권한
+    permissions:
+      pages: write
+      id-token: write
+      contents: read
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
+      - name: Deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
