--- a/src/Sample.Wasm/Sample.Wasm.csproj
+++ b/src/Sample.Wasm/Sample.Wasm.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
   <!-- Blazor WASM runtime + tooling for dev server -->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.7" PrivateAssets="all" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
   <!-- Microsoft.Extensions.AI abstractions + OpenAI adapter -->
-  <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.0-preview.9.24503.7" />
-  <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.0.0-preview.9.24503.7" />
+  <PackageReference Include="Microsoft.Extensions.AI" Version="9.5.0" />
+  <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.1.0-preview.1.25064.3" />
+  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    <PrivateAssets>all</PrivateAssets>
+  </PackageReference>
   </ItemGroup>
 
 </Project>
