--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         working-directory: src
         run: |
           dotnet publish -c Release -o ../docs
-          sed -i 's%<base href="/"%<base href="/${{ github.event.repository.name }}/"%g' ../docs/wwwroot/index.html || true
+          sed -i 's%<base href="/"%<base href="/${{ github.event.repository.name }}/"%g' ../docs/wwwroot/index.html
           touch ../docs/wwwroot/.nojekyll
           # Ensure the directory exists and has content
           ls -la ../docs/wwwroot/
