feat: add settings panel and usage info styles, implement scroll utilities, and configure TypeScript and Vite settings
- Added CSS styles for settings panel and usage info components.
- Implemented scroll utilities for better scroll management and user experience.
- Configured TypeScript with strict settings and module resolution for better compatibility.
- Set up Vite configuration for development and production builds.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,32 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "name": "Launch React App in Chrome",
+            "url": "http://localhost:5173",
+            "webRoot": "${workspaceFolder}/src",
+            "sourceMaps": true,
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "msedge",
+            "request": "launch",
+            "name": "Launch React App in Edge",
+            "url": "http://localhost:5173",
+            "webRoot": "${workspaceFolder}/src",
+            "sourceMaps": true,
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Attach to Chrome",
+            "port": 9222,
+            "webRoot": "${workspaceFolder}/src",
+            "sourceMaps": true
         }
     ]
 }
