Vite 빌드 출력 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -278,6 +278,10 @@ FakesAssemblies/
 .ntvs_analysis.dat
 node_modules/
 
+# Build output (Vite)
+dist/
+*.tsbuildinfo
+
 # Visual Studio 6 build log
 *.plg
 
