--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "clsx": "^2.0.0",
+    "highlight.js": "^11.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
