refactor: migrate to Sass modules and update SCSS structure
- Replaced `sass` with `sass-embedded` in package.json for improved Sass module support.
- Updated main.tsx to import external CSS dependencies for Bootstrap and Highlight.js.
- Refactored SCSS mixins and variables to utilize the new Sass module system, enhancing maintainability.
- Introduced a new `elevation` mixin for consistent shadow application across components.
- Streamlined component styles by replacing `@extend` with inline styles to avoid cross-file dependencies.
- Enhanced accessibility and mobile-first design principles throughout the SCSS files.
- Added a new index file for abstracts to facilitate easier imports and organization.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,90 @@
 				"$tsc"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Build styles via Vite",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"isBackground": false,
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build styles via Vite (post-refactor)",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"isBackground": false,
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build styles via Vite (post-refactor)",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"isBackground": false,
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build styles via Vite (post-refactor)",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"isBackground": false,
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build styles via Vite (post-refactor)",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"isBackground": false,
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build styles via Vite (post-refactor)",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"build"
+			],
+			"isBackground": false,
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"group": "build"
 		}
 	]
 }
