--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite build && vite preview"
+    "preview": "vite build && vite preview",
+    "stylelint": "stylelint \"src/**/*.scss\"",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -33,6 +35,13 @@
     "sass": "npm:sass-embedded@^1.91.0",
     "sass-embedded": "^1.91.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "prettier": "^3.3.3",
+    "postcss": "^8.4.47",
+    "postcss-scss": "^4.0.9",
+    "stylelint": "^16.10.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4"
   }
 }
